--- a/style.css
+++ b/style.css
@@ -48,21 +48,20 @@ h2{
     align-items: center;
 }
 .main__form-1{
-    margin-left: 17rem;
-    padding-top: 2rem;
+    margin-left: 15rem;
+    padding-top: 4rem;
     padding-left: 10rem;
 }
 .main__form-2{
-    margin-left: 17rem;
-    padding-top: 2rem;
-    padding-left: 5rem;
+    margin-left: 27rem;
 }
+
 .form-1__imput{
     width: 17rem;
     height: 3rem;
     border-radius: .3rem;
+    margin-left: 1rem;
 }
-
 input{
     margin-top: 1rem;
 }
@@ -71,3 +70,7 @@ input{
     margin-top: 1rem;
     margin-left: 40.5rem;
 }
+.container{
+    margin-top: 2rem;
+    max-width: 1450px;
+} 
