--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(assets/img/pokemon-imagen.jpg);
+    background-image: url(../img/pokemon-imagen.jpg);
     background-size: cover;
     margin: 0;
     padding: 0;
